syntax = "proto3";

package laptopstore.pcbook;
option go_package = "pb";

import "memory_message.proto";

message Filter{
    double max_price_usd = 1;
    double min_ghz = 2;
    uint32 min_cpu_core = 3;
    Memory min_ram = 4;
}