syntax = "proto3";

package laptopstore.pcbook;
option go_package = "pb";

import "laptop_message.proto";
import "filter_message.proto";

message CreateLaptopRequest { Laptop laptop = 1; }

message CreateLaptopResponse { string id = 1; }

message FilterLaptopRequest { Filter filter = 1; }

message FilterLaptopResponse{ Laptop laptop=1; }

service LaptopService {
  rpc CreateLaptop(CreateLaptopRequest) returns (CreateLaptopResponse) {};
  rpc FilterLaptop(FilterLaptopRequest) returns (stream FilterLaptopResponse) {};
}